# MuCpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt
src/: album_widget.cpp  album_widget.hpp  clickable_label.cpp  clickable_label.hpp  flow_layout.cpp  flow_layout.hpp  main.cpp  main_window.cpp  main_window.hpp  mucpp.cpp  mucpp.hpp  music_player.hpp  ui_album_widget.hpp
ui/: album_widget.ui  artist_widget.ui  main_win.ui  settings_frame.ui
